--- a/products/workshop/20260117A/index.html
+++ b/products/workshop/20260117A/index.html
@@ -34,7 +34,7 @@
   <meta name="description" content="親子向けロボット製作体験会をロボリンクで開催！">
   <link rel="icon" href="assets/img/logo.svg" type="image/svg+xml">
   <link rel="stylesheet" href="assets/css/main.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="products/workshop/20260117A/style.css">
 </head>
 
 <body data-page="columns">
