--- a/columns/post.html
+++ b/columns/post.html
@@ -31,7 +31,7 @@
   </script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>記事 | ThouLab</title>
-  <meta name="description" content="ThouLabのコラム記事。">
+  <meta name="description" content="ThouLabの新着情報記事。">
   <link rel="icon" href="assets/img/logo.svg" type="image/svg+xml">
   <link rel="stylesheet" href="assets/css/main.css">
 </head>
