--- a/contact/index.html
+++ b/contact/index.html
@@ -56,11 +56,11 @@
         <div class="card reveal">
           <h2 style="margin:0;">フォーム（メール作成）</h2>
           <p class="sub" style="margin-top:10px;">
-            GitHub Pages はサーバーがないため、送信はお使いのメールアプリで行います。<br>
+            送信はお使いのメールアプリで行います。<br>
             入力すると <code>mailto:</code> で下書きを生成します。
           </p>
 
-          <form id="mailto-form" class="form" data-to="contact@thoulab.example">
+          <form id="mailto-form" class="form" data-to="info@thoulab.jp">
             <div class="field">
               <label for="name">お名前</label>
               <input id="name" name="name" type="text" placeholder="例）山田 太郎" required>
@@ -84,40 +84,7 @@
           <hr class="sep">
 
           <div class="notice">
-            直接メールする場合: <a href="mailto:contact@thoulab.example">contact@thoulab.example</a><br>
-            ※このアドレスはサンプルです。実運用のメールアドレスに置き換えてください。
-          </div>
-        </div>
-
-        <div class="card reveal">
-          <h2 style="margin:0;">その他の窓口</h2>
-          <p class="sub" style="margin-top:10px;">
-            返信が必要な相談はメールが確実です。短い連絡や告知はSNSでも受け付けます。
-          </p>
-
-          <div class="list" style="margin-top:14px;">
-            <div class="notice">
-              <strong>想定している相談内容</strong><br>
-              ・ワークショップの企画 / 開催依頼<br>
-              ・共同研究 / 実験プロジェクト<br>
-              ・イベント登壇 / 研修 / 講義<br>
-              ・記事執筆 / 監修 / 取材
-            </div>
-            <div class="notice">
-              <strong>外部フォーム（任意）</strong><br>
-              Formspree / Google Forms などを使うと、このページに「送信できるフォーム」を設置できます。<br>
-              README に例を記載しています。
-            </div>
-            <div class="notice">
-              <strong>レスポンス目安</strong><br>
-              通常 2〜5 営業日以内を目安に返信します（内容によって前後します）。
-            </div>
-          </div>
-
-          <div style="margin-top:14px; display:flex; gap:10px; flex-wrap:wrap;">
-            <a class="btn" href="https://x.com/" target="_blank" rel="noopener noreferrer">X</a>
-            <a class="btn" href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
-            <a class="btn" href="https://github.com/" target="_blank" rel="noopener noreferrer">GitHub</a>
+            直接メールする場合: <a href="mailto:info@thoulab.jp">info@thoulab.jp</a><br>
           </div>
         </div>
       </div>
