--- a/members/index.html
+++ b/members/index.html
@@ -44,9 +44,8 @@
       <div class="breadcrumbs">
         <a href="./">ホーム</a> / メンバー
       </div>
-      <h1>Team ThouLab</h1>
+      <h1>Team ThouLab | チーム紹介</h1>
       <p>
-        ゆにーくななかまを紹介するゼ！
       </p>
     </div>
 
@@ -55,6 +54,20 @@
         <!-- rendered by content.js -->
       </div>
     </section>
+
+    <section class="section" id="company">
+      <div class="container">
+        <div class="section-head reveal">
+          <div>
+            <h2>Organization | 団体情報</h2>
+            <p class="sub">
+              ThouLab は現在、任意団体として活動しており、今後の活動拡大にあわせて法人化（登記）を予定しています。
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </main>
 
   <div id="site-footer"></div>
