--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
           <div class="kicker"><span class="dot"></span>Make Creation Closer</div>
           <h1>今こそ創造を身近に</h1>
           <p class="lead">
-            「技術が発展＞複雑化＞ブラックボックス化＞完成品として消費される社会
-＞仕組みが見えなくなればなるほど疑問も生まれない
-＞作る過程」
+            私たちが普段触れるものは、あまりにも複雑なのに、<br>
+            仕組みの見えないままに、完成品として蓋をされてしまう。<br>
+            あたりまえに使うものほど、作ってみたら疑問が見つかるはず。
           </p>
 
           <div class="hero-actions">
