--- a/products/workshop/20260117A/index.html
+++ b/products/workshop/20260117A/index.html
@@ -32,9 +32,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>親子で楽しむ！会話ロボットを作ってみよう！ | ThouLab</title>
   <meta name="description" content="親子向けロボット製作体験会をロボリンクで開催！">
-  <link rel="icon" href="assets/img/logo.svg" type="image/svg+xml">
-  <link rel="stylesheet" href="assets/css/main.css">
-  <link rel="stylesheet" href="products/workshop/20260117A/style.css">
+  <link rel="icon" href="/assets/img/logo.png" type="image/png">
+  <link rel="stylesheet" href="/assets/css/main.css">
+  <link rel="stylesheet" href="/products/workshop/20260117A/style.css">
 </head>
 
 <body data-page="columns">
@@ -51,7 +51,7 @@
         <figure class="hero-media reveal" aria-label="イベント告知画像">
         <!-- 画像は差し替えてください（例：assets/img/workshops/2026-01-17.png） -->
         <img
-            src="assets/img/workshops/2026-01-17.png"
+            src="/assets/img/workshops/2026-01-17.png"
             alt="親子で楽しむ！会話ロボットを作ってみよう！ワークショップ告知"
             loading="lazy"
         />
@@ -287,8 +287,8 @@
 
   <div id="site-footer"></div>
 
-  <script defer src="assets/js/markdown.js"></script>
-  <script defer src="assets/js/main.js"></script>
-  <script defer src="assets/js/content.js"></script>
+  <script defer src="/assets/js/markdown.js"></script>
+  <script defer src="/assets/js/main.js"></script>
+  <script defer src="/assets/js/content.js"></script>
 </body>
 </html>
