--- a/products/workshop/20260117A/index.html
+++ b/products/workshop/20260117A/index.html
@@ -47,16 +47,13 @@
         </div>
         <h1>親子で楽しむ！会話ロボットを作ってみよう！</h1>
 
-        <!-- ヒーロー画像（最初に大きく） -->
-        <figure class="hero-media reveal" aria-label="イベント告知画像">
-        <!-- 画像は差し替えてください（例：assets/img/workshops/2026-01-17.png） -->
-        <img
-            src="/assets/img/workshops/2026-01-17.png"
-            alt="親子で楽しむ！会話ロボットを作ってみよう！ワークショップ告知"
-            loading="lazy"
-        />
-        <figcaption class="muted">※画像はイメージです</figcaption>
-        </figure>
+
+        <div class="callout">
+            <p class="lead">
+            3Dプリント技術と自然言語処理（LLM）を使って、親子で「会話ロボット」をつくる体験型ワークショップです。つくる→試す→ことばを調整する、という流れで “学びがその場で動く” 体験を用意しています。
+            </p>
+        </div>
+        </section>
 
         <!-- 概要カード -->
         <section class="section reveal" aria-labelledby="event-summary">
@@ -96,13 +93,16 @@
             </dl>
         </div>
 
-        <div class="callout">
-            <p class="lead">
-            3Dプリント技術と自然言語処理（LLM）を使って、親子で「会話ロボット」をつくる体験型ワークショップです。
-            つくる→試す→ことばを調整する、という流れで “学びがその場で動く” 体験を用意しています。
-            </p>
-        </div>
-        </section>
+        <!-- CTA -->
+        <section class="section reveal" aria-label="応募への導線">
+            <div class="cta card">
+                <h2 class="cta-title">参加をご希望の方へ</h2>
+                <p class="cta-text">
+                    <a href="https://x.gd/workshop0117">こちらをクリック！</a> <br />
+                <span class="muted">締切：2026年1月10日（土）</span>
+                </p>
+            </div>
+            </section>
 
         <!-- 内容 -->
         <section class="section reveal" aria-labelledby="event-contents">
@@ -267,18 +267,20 @@
             </p>
             </details>
         </div>
+                <!-- ヒーロー画像（最初に大きく） -->
+        <figure class="hero-media reveal" aria-label="イベント告知画像">
+        <!-- 画像は差し替えてください（例：assets/img/workshops/2026-01-17.png） -->
+        <img
+            src="/assets/img/workshops/2026-01-17.png"
+            alt="親子で楽しむ！会話ロボットを作ってみよう！ワークショップ告知"
+            loading="lazy"
+        />
+        <figcaption class="muted">※チラシ画像</figcaption>
+        </figure>
+
         </section>
 
-        <!-- CTA -->
-        <section class="section reveal" aria-label="応募への導線">
-        <div class="cta card">
-            <h2 class="cta-title">参加をご希望の方へ</h2>
-            <p class="cta-text">
-            チラシのQRコードから応募フォームへお進みください。<br />
-            <span class="muted">締切：2026年1月10日（土）</span>
-            </p>
-        </div>
-        </section>
+
 
 
 
