--- a/products/workshop/20260117A/index.html
+++ b/products/workshop/20260117A/index.html
@@ -114,7 +114,7 @@
             <div class="cta card">
                 <h2 class="cta-title">参加をご希望の方へ</h2>
                 <p class="cta-text_link">
-                    <a href="https://x.gd/workshop0117">こちらをクリック！</a> <br />
+                    <a href="https://x.gd/workshop0117">ここをクリックして応募フォームに回答！</a> <br />
                 </p>
                 <p class="cta-text">
                 <span class="muted">締切：2026年1月10日（土）</span>
