--- a/products/workshop/20260117A/index.html
+++ b/products/workshop/20260117A/index.html
@@ -52,7 +52,10 @@
             </div>
             <div class="callout">
                 <p class="lead">
-                3Dプリント技術と自然言語処理（LLM）を使って、親子で「会話ロボット」をつくる体験型ワークショップです。つくる→試す→ことばを調整する、という流れで “自分が設定した会話ロボットが喋る” 体験を用意しています。
+                3Dプリント技術と自然言語処理（LLM）を使って、親子で「会話ロボット」をつくる体験型ワークショップです。
+                <br> 
+                <br>
+                つくる→試す→ことばを調整する、という流れで 「自分が設定した会話ロボットが喋る」体験を用意しています。
                 </p>
             </div>
           </div>
