--- a/columns/index.html
+++ b/columns/index.html
@@ -32,7 +32,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>News | ThouLab</title>
   <meta name="description" content="ThouLabのNews一覧。研究メモ、制作過程、ワークショップのお知らせなど。">
-  <link rel="icon" href="assets/img/logo.svg" type="image/svg+xml">
+  <link rel="icon" href="/assets/img/logo_tab.png" type="image/png">
   <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
