--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <meta property="og:description" content="対話がつくる、今日をさがす。">
   <meta property="og:type" content="website">
   <meta name="theme-color" content="#0b0e14">
-  <link rel="icon" href="assets/img/logo.svg" type="image/svg+xml">
+  <link rel="icon" href="/assets/img/logo_tab.png" type="image/png">
   <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
