--- a/members/index.html
+++ b/members/index.html
@@ -32,7 +32,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>メンバー | ThouLab</title>
   <meta name="description" content="ThouLabのメンバー紹介。">
-  <link rel="icon" href="assets/img/logo.svg" type="image/svg+xml">
+  <link rel="icon" href="/assets/img/logo_tab.png" type="image/png">
   <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
