--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -32,7 +32,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>理念 | ThouLab</title>
   <meta name="description" content="ThouLabの理念・価値観・活動方針をまとめています。">
-  <link rel="icon" href="assets/img/logo.svg" type="image/svg+xml">
+  <link rel="icon" href="/assets/img/logo_tab.png" type="image/png">
   <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
