--- a/products/workshop/20260117A/index.html
+++ b/products/workshop/20260117A/index.html
@@ -32,7 +32,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>親子で楽しむ！会話ロボットを作ってみよう！ | ThouLab</title>
   <meta name="description" content="親子向けロボット製作体験会をロボリンクで開催！">
-  <link rel="icon" href="/assets/img/logo.png" type="image/png">
+  <link rel="icon" href="/assets/img/logo_tab.png" type="image/png">
   <link rel="stylesheet" href="/assets/css/main.css">
   <link rel="stylesheet" href="/products/workshop/20260117A/style.css">
 </head>
