added sentence to main lead

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
           <p class="lead">
             私たちが普段触れるものは、あまりにも複雑なのに、<br>
             仕組みの見えないままに、完成品として蓋をされてしまう。<br>
-            あたりまえに使うものほど、作ってみたら疑問が見つかるはず。
+            あたりまえに使うものほど、作ってみたら疑問が見つかるはず。<br>
+            ThouLab(ソーラボ)は、複雑化された技術と向き合い、紐解く体験を提供します。
           </p>
 
           <div class="hero-actions">
