--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
           <div class="kicker"><span class="dot"></span>Make Creation Closer</div>
           <h1>今こそ創造を身近に</h1>
           <p class="lead">
-            私たちが普段触れるものは、あまりにも複雑なのに、<br>
-            仕組みの見えないままに、完成品として蓋をされてしまう。<br>
+            私たちが普段触れるものは、あまりにも複雑なのに、仕組みの見えないままに、完成品として蓋をされてしまう。<br>
             あたりまえに使うものほど、作ってみたら疑問が見つかるはず。<br>
             ThouLab(ソーラボ)は、複雑化された技術と向き合い、紐解く体験を提供します。
           </p>
