--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     })();
   </script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ThouLab | 対話がつくる、今日をさがす。</title>
-  <meta name="description" content="ThouLab は、調べ、つくり、体験としてひらく場を提供します。理念、コラム、メンバー、ワークショップを含むプロダクト、問い合わせの情報をまとめています。">
+  <title>ThouLab - Make Creation Closer</title>
+  <meta name="description" content="ThouLab(ソーラボ)は、複雑化された技術と向き合い、紐解く体験を提供します。">
   <meta property="og:title" content="ThouLab">
-  <meta property="og:description" content="対話がつくる、今日をさがす。">
+  <meta property="og:description" content="今こそ創造を身近に">
   <meta property="og:type" content="website">
   <meta name="theme-color" content="#0b0e14">
   <link rel="icon" href="/assets/img/logo_tab.png" type="image/png">
@@ -57,17 +57,17 @@
           <div class="kicker"><span class="dot"></span>Make Creation Closer</div>
           <h1>今こそ創造を身近に</h1>
           <p class="lead">
-            私たちが普段触れるものは、あまりにも複雑なのに、仕組みの見えないままに、完成品として蓋をされてしまう。<br>
+            私たちが普段触れるものは、あまりにも複雑なのに、<br>
+            仕組みの見えないままに、完成品として蓋をされてしまう。<br>
             あたりまえに使うものほど、作ってみたら疑問が見つかるはず。<br>
-            ThouLab(ソーラボ)は、複雑化された技術と向き合い、紐解く体験を提供します。
-          </p>
-
-          <div class="hero-actions">
-            <a class="btn primary" href="products/">
+            <p>
+              ThouLab(ソーラボ)は、複雑化された技術と向き合い、紐解く体験を提供します。
+            </p>
+<a class="btn primary" href="products/">
               <svg class="icon" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M4 7h16M4 12h16M4 17h10" stroke="currentColor" stroke-width="1.6" stroke-linecap="round"/></svg>
               プロダクトを知る
             </a>
-            <a class="btn" href="columns/">
+            <a class="btn" href="news/">
               <svg class="icon" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M5 5h14v14H5V5Z" stroke="currentColor" stroke-width="1.6"/><path d="M8 9h8M8 13h8M8 17h5" stroke="currentColor" stroke-width="1.6" stroke-linecap="round"/></svg>
               新着情報を見る
             </a>
@@ -107,7 +107,7 @@
               
             </p>
           </div>
-          <a class="btn" href="columns/">一覧</a>
+          <a class="btn" href="news/">一覧</a>
         </div>
 
         <div id="home-columns" class="grid cols-3">
