--- a/products/workshop/20260117A/index.html
+++ b/products/workshop/20260117A/index.html
@@ -31,8 +31,8 @@
   </script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>親子で楽しむ！会話ロボットを作ってみよう！ | ThouLab</title>
-  <meta name="description" content="親子向けロボット製作体験会をロボリンクで開催！">
-  <link rel="icon" href="/assets/img/logo_tab.png" type="image/png">
+  <meta name="description" content="親子向けロボット製作体験会。2026年1月17日にロボリンクで開催決定！">
+  <link rel="icon" href="/assets/img/logo.png" type="image/png">
   <link rel="stylesheet" href="/assets/css/main.css">
   <link rel="stylesheet" href="/products/workshop/20260117A/style.css">
 </head>
@@ -43,7 +43,7 @@
   <main id="main" class="container">
     <div class="page-head reveal">
         <div class="breadcrumbs">
-            <a href="./">ホーム</a> / プロダクト / ワークショップ / 2026年1月17日
+            2026年1月17日
         </div>
         <div class="hero-split">
           <div class="hero-left">
@@ -68,7 +68,7 @@
                   alt="親子で楽しむ！会話ロボットを作ってみよう！ワークショップ告知"
                   loading="lazy"
               />
-              <figcaption class="muted">※チラシ画像</figcaption>
+              <figcaption class="muted">※チラシ画像(クリックで拡大)</figcaption>
             </figure>
           </div>
         </div>
