--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -31,7 +31,7 @@
   </script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>理念 | ThouLab</title>
-  <meta name="description" content="ThouLabの理念・価値観・活動方針をまとめています。">
+  <meta name="description" content="AIに聞けばすぐ分かる。それでもなぜ、私たちは教科書を読むのか。">
   <link rel="icon" href="/assets/img/logo_tab.png" type="image/png">
   <link rel="stylesheet" href="assets/css/main.css">
 </head>
