--- a/index.html
+++ b/index.html
@@ -63,15 +63,7 @@
             <p>
               ThouLab(ソーラボ)は、複雑化された技術と向き合い、紐解く体験を提供します。
             </p>
-<a class="btn primary" href="products/">
-              <svg class="icon" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M4 7h16M4 12h16M4 17h10" stroke="currentColor" stroke-width="1.6" stroke-linecap="round"/></svg>
-              プロダクトを知る
-            </a>
-            <a class="btn" href="news/">
-              <svg class="icon" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M5 5h14v14H5V5Z" stroke="currentColor" stroke-width="1.6"/><path d="M8 9h8M8 13h8M8 17h5" stroke="currentColor" stroke-width="1.6" stroke-linecap="round"/></svg>
-              新着情報を見る
-            </a>
-            <a class="btn" href="contact/">
+            <a class="btn primary" href="contact/">
               <svg class="icon" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M4 6h16v12H4V6Z" stroke="currentColor" stroke-width="1.6"/><path d="m4 7 8 6 8-6" stroke="currentColor" stroke-width="1.6" stroke-linecap="round"/></svg>
               お問い合わせ
             </a>
@@ -79,6 +71,14 @@
         </div>
       </div>
     </section>
+
+    <div class="scroll-cue" id="scrollCue" aria-hidden="true">
+      <div class="scroll-cue__pill">
+        <span class="scroll-cue__dot"></span>
+        <span class="scroll-cue__text">もっと詳しく！</span>
+        <span class="scroll-cue__chev">☟</span>
+      </div>
+    </div>
 
     <section class="section">
       <div class="container">
@@ -123,4 +123,15 @@
   <script defer src="assets/js/motion.js"></script>
   <script defer src="assets/js/content.js"></script>
 </body>
+<script>
+  (function(){
+    const el = document.getElementById('scrollCue');
+    if(!el) return;
+    const hide = () => {
+      if (window.scrollY > 40) el.style.display = 'none';
+    };
+    window.addEventListener('scroll', hide, { passive: true });
+    hide();
+  })();
+</script>
 </html>
