--- a/products/workshop/20260117A/index.html
+++ b/products/workshop/20260117A/index.html
@@ -55,16 +55,16 @@
           </div>
         </div>
 
-        <div class="scroll-cue" id="scrollCue" aria-hidden="true">
+        <!-- <div class="scroll-cue" id="scrollCue" aria-hidden="true">
           <div class="scroll-cue__pill">
             <span class="scroll-cue__dot"></span>
             <span class="scroll-cue__text">もっと詳しく！</span>
             <span class="scroll-cue__chev">☟</span>
           </div>
-        </div>
+        </div> -->
 
         <!-- 概要カード -->
-        <section class="section reveal" aria-labelledby="event-summary">
+        <section class="section" aria-labelledby="event-summary">
           <h2 id="event-summary">イベント概要</h2>
           <div class="card">
               <dl class="kv">
