--- a/assets/img/quokka/index.html
+++ b/assets/img/quokka/index.html
@@ -31,7 +31,7 @@
   </script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>クオッカイラスト一覧 | ThouLab</title>
+  <title>クオッカ一覧 | ThouLab</title>
   <meta name="description" content="クオッカのLINEスタンプ用イラスト一覧。">
   <link rel="icon" href="/assets/img/logo_tab.png" type="image/png">
 
@@ -47,13 +47,13 @@
   <main class="container">
     <section class="hero">
       <div class="hero-text">
-        <h1>クオッカイラスト一覧</h1>
+        <h1>チーム・お守りクオッカ（準備中）</h1>
       </div>
     </section>
 
     <section class="grid">
       <article class="card">
-        <a class="thumb" href="#" aria-label="スタンプ詳細へ（任意）">
+        <a class="thumb" href="assets/img/quokka/qs000.png" aria-label="スタンプ詳細へ（任意）">
           <img src="assets/img/quokka/qs000.png" alt="監督クオッカ" loading="lazy">
         </a>
         <div class="card-body">
@@ -64,7 +64,7 @@
       </article>
 
       <article class="card">
-        <a class="thumb" href="#" aria-label="スタンプ詳細へ（任意）">
+        <a class="thumb" href="assets/img/quokka/qs001.png" aria-label="スタンプ詳細へ（任意）">
           <img src="assets/img/quokka/qs001.png" alt="運動クオッカ" loading="lazy">
         </a>
         <div class="card-body">
@@ -75,7 +75,7 @@
       </article>
 
       <article class="card">
-        <a class="thumb" href="#" aria-label="スタンプ詳細へ（任意）">
+        <a class="thumb" href="assets/img/quokka/qs002.png" aria-label="スタンプ詳細へ（任意）">
           <img src="assets/img/quokka/qs002.png" alt="読書クオッカ" loading="lazy">
         </a>
         <div class="card-body">
@@ -86,7 +86,7 @@
       </article>
 
       <article class="card">
-        <a class="thumb" href="#" aria-label="スタンプ詳細へ（任意）">
+        <a class="thumb" href="assets/img/quokka/qs003.png" aria-label="スタンプ詳細へ（任意）">
           <img src="assets/img/quokka/qs003.png" alt="温泉クオッカ" loading="lazy">
         </a>
         <div class="card-body">
@@ -97,7 +97,7 @@
       </article>
 
       <article class="card">
-        <a class="thumb" href="#" aria-label="スタンプ詳細へ（任意）">
+        <a class="thumb" href="assets/img/quokka/qs004.png" aria-label="スタンプ詳細へ（任意）">
           <img src="assets/img/quokka/qs004.png" alt="孤独クオッカ" loading="lazy">
         </a>
         <div class="card-body">
@@ -108,7 +108,7 @@
       </article>
 
       <article class="card">
-        <a class="thumb" href="#" aria-label="スタンプ詳細へ（任意）">
+        <a class="thumb" href="assets/img/quokka/qs005.png" aria-label="スタンプ詳細へ（任意）">
           <img src="assets/img/quokka/qs005.png" alt="真夏クオッカ" loading="lazy">
         </a>
         <div class="card-body">
@@ -119,7 +119,7 @@
       </article>
 
       <article class="card">
-        <a class="thumb" href="#" aria-label="スタンプ詳細へ（任意）">
+        <a class="thumb" href="assets/img/quokka/qs006.png" aria-label="スタンプ詳細へ（任意）">
           <img src="assets/img/quokka/qs006.png" alt="真冬クオッカ" loading="lazy">
         </a>
         <div class="card-body">
@@ -130,7 +130,7 @@
       </article>
 
       <article class="card">
-        <a class="thumb" href="#" aria-label="スタンプ詳細へ（任意）">
+        <a class="thumb" href="assets/img/quokka/qs007.png" aria-label="スタンプ詳細へ（任意）">
           <img src="assets/img/quokka/qs007.png" alt="多忙クオッカ" loading="lazy">
         </a>
         <div class="card-body">
@@ -141,7 +141,7 @@
       </article>
 
       <article class="card">
-        <a class="thumb" href="#" aria-label="スタンプ詳細へ（任意）">
+        <a class="thumb" href="assets/img/quokka/qs008.png" aria-label="スタンプ詳細へ（任意）">
           <img src="assets/img/quokka/qs008.png" alt="睡眠クオッカ" loading="lazy">
         </a>
         <div class="card-body">
@@ -152,7 +152,7 @@
       </article>
 
       <article class="card">
-        <a class="thumb" href="#" aria-label="スタンプ詳細へ（任意）">
+        <a class="thumb" href="assets/img/quokka/qs009.png" aria-label="スタンプ詳細へ（任意）">
           <img src="assets/img/quokka/qs009.png" alt="演奏クオッカ" loading="lazy">
         </a>
         <div class="card-body">
@@ -163,7 +163,7 @@
       </article>
 
       <article class="card">
-        <a class="thumb" href="#" aria-label="スタンプ詳細へ（任意）">
+        <a class="thumb" href="assets/img/quokka/qs010.png" aria-label="スタンプ詳細へ（任意）">
           <img src="assets/img/quokka/qs010.png" alt="衰弱クオッカ" loading="lazy">
         </a>
         <div class="card-body">
